{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 433,
  "lineage": "f22cd920-e2f8-2269-c6fb-354145b9d681",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "prod_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:504364225420:loadbalancer/Prod-elb",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "Prod-elb-986193545.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Prod-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0718b15cce4c179b8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Prod-elb",
            "security_groups": [
              "sg-0ae1e42fd83c0f98b"
            ],
            "source_security_group": "504364225420/Prod_allow_http",
            "source_security_group_id": "sg-0ae1e42fd83c0f98b",
            "subnets": [
              "subnet-08215f4553ee77a36",
              "subnet-0bb34a0615d678ff0"
            ],
            "tags": {
              "Name": "Prod_elb"
            },
            "tags_all": {
              "Name": "Prod_elb"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_security_group.allow_http",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:internet-gateway/igw-071abba2192dd5d95",
            "id": "igw-071abba2192dd5d95",
            "owner_id": "504364225420",
            "tags": {
              "Name": "Prod_internet_gateway"
            },
            "tags_all": {
              "Name": "Prod_internet_gateway"
            },
            "vpc_id": "vpc-0edf66f38497e7b32"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:route-table/rtb-0a8175fa75112d995",
            "id": "rtb-0a8175fa75112d995",
            "owner_id": "504364225420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071abba2192dd5d95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod_igw_rt"
            },
            "tags_all": {
              "Name": "Prod_igw_rt"
            },
            "vpc_id": "vpc-0edf66f38497e7b32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6cb2a7f401d8f6a",
            "route_table_id": "rtb-0a8175fa75112d995",
            "subnet_id": "subnet-0bb34a0615d678ff0"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_route_table.prod_rt",
            "aws_subnet.subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e16ae4f79fe745",
            "route_table_id": "rtb-0a8175fa75112d995",
            "subnet_id": "subnet-08215f4553ee77a36"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_route_table.prod_rt",
            "aws_subnet.subnet_b",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:security-group/sg-0ae1e42fd83c0f98b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ae1e42fd83c0f98b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "3.120.181.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Prod_allow_http",
            "name_prefix": "",
            "owner_id": "504364225420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Prod_allow_http"
            },
            "tags_all": {
              "Name": "Prod_allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edf66f38497e7b32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1013396813",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae1e42fd83c0f98b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.120.181.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3538805351",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae1e42fd83c0f98b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2201175990",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae1e42fd83c0f98b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:subnet/subnet-0bb34a0615d678ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "137.23.1.0/24",
            "id": "subnet-0bb34a0615d678ff0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504364225420",
            "tags": {
              "Name": "Prod_public_subnet_a"
            },
            "tags_all": {
              "Name": "Prod_public_subnet_a"
            },
            "vpc_id": "vpc-0edf66f38497e7b32"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:subnet/subnet-08215f4553ee77a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "137.23.2.0/24",
            "id": "subnet-08215f4553ee77a36",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504364225420",
            "tags": {
              "Name": "Prod_public_subnet_b"
            },
            "tags_all": {
              "Name": "Prod_public_subnet_b"
            },
            "vpc_id": "vpc-0edf66f38497e7b32"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:504364225420:vpc/vpc-0edf66f38497e7b32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "137.23.0.0/16",
            "default_network_acl_id": "acl-0773319f637b845cb",
            "default_route_table_id": "rtb-01188dc602e03aa45",
            "default_security_group_id": "sg-0be927504af3e29e1",
            "dhcp_options_id": "dopt-86f49aec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0edf66f38497e7b32",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01188dc602e03aa45",
            "owner_id": "504364225420",
            "tags": {
              "Name": "Prod_VPC"
            },
            "tags_all": {
              "Name": "Prod_VPC"
            }
          }
        }
      ]
    }
  ]
}